@@ -113,6 +113,10 @@ Other Changes and Additions
   show the difference between two floating point numbers if they were the same
   up to some low number of digits. (spacetelescope/PyFITS#21)
 
+- Fixed an issue where Python 2 sometimes allowed non-ASCII strings to be
+  assigned as header values if they were assigned as old-style ``str`` objects
+  and not ``unicode`` objects. (spacetelescope/PyFITS#37)
+
 
 3.1.4 (unreleased)
 ------------------
@@ -163,6 +167,10 @@ Other Changes and Additions
 - Fixed a display formatting issue with fitsdiff where sometimes it did not
   show the difference between two floating point numbers if they were the same
   up to some low number of digits. (Backported from 3.2.1)
+
+- Fixed an issue where Python 2 sometimes allowed non-ASCII strings to be
+  assigned as header values if they were assigned as old-style ``str`` objects
+  and not ``unicode`` objects. (Backported from 3.2.1)
 
 
 3.0.13 (unreleased)
